# mneme

./: .gitattributes  .gitignore  AGENT_SETUP.md  CONTEXT.md  HANDOFF.md  LICENSE  PRD.md  PROOF-ADR-0004.md  PROOF-PHASE0.md  README.md  install.ps1  install.sh  mneme.py  pyproject.toml  test_adr0004.py  test_audit_fixes.py  test_memory_gaps.py  test_mneme.py  test_phase0.py  test_unified.py
bench/: capture_golden.py  engine_gate.py  golden_off_path.json  mechanism_bakeoff.py  scale_bench.py
docs/: ADR-0004-optional-embedding-rerank.md  ADR-0005-semantic-episodes-and-host-runtime.md  ADR-0006-episode-quality-and-host-layout.md  LAYOUT.md
host/: README.md
host/hermes/: __init__.py  conftest.py  plugin.yaml  provider.py  runtime.py  test_provider_lifecycle.py  test_runtime.py
scripts/: archive_thin_episodes.py  list_conflicts.py  provision_embeddings.ps1  provision_embeddings.sh  sync_hermes_bundle.py  verify_hermes_bundle.py
